--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 language: python
+
 python:
   - "2.7"
   - "3.3"
   - "3.4"
   - "3.5"
   - "nightly"
-# command to install dependencies
-install: "pip install -r requirements.txt"
-# command to run tests
-script: nosetests tests/test-utils.py
+
+before_script:
+  - pip install -r requirements.txt
+  - pip install coveralls
+
+script:
+    - nosetests --with-coverage test/test-load_data.py tests/test-utils.py || exit 1
+
+after_success:
+    - coveralls
